# fusion-heat-transport-ai

./: .gitignore  CLAUDE.md  HISTORY.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-edit-check.sh
app/: __main__.py  run_benchmark.py
docs/: ANALYSIS_TUTORIAL.md  IMPROVEMENT_CYCLE_TUTORIAL.md  MANUAL.md  MULTIAGENT_NOTE.md  TUTORIAL.md  advanced_analysis_report.txt  advanced_multi_agent.py  analysis_report.txt  analyze_solver_selection.py  approach_overview.md  generate_analysis_slides.py  generate_figures.py  generate_improvement_cycle_slides.py  generate_multiagent_report.py  generate_multiagent_slides.py  generate_pinn_report.py  generate_slides.py  hypotheses.json  improvement_cycle_slides.pptx  multi_agent_analysis.py  multi_agent_report.txt  multiagent_presentation.pptx  next_hypotheses.py  next_hypotheses_report.txt  parallel_multi_agent.py  presentation.pptx  solver_analysis.pptx  verify_hypotheses.py
docs/analysis/: __init__.py  advanced_analysis_report.txt  advanced_multi_agent.py  analyze_solver_selection.py  experiment_framework.py  improvement_agents.py  latex_report_agent.py  next_hypotheses.py  (+5 more)
features/: extract.py  profiles.py
metrics/: accuracy.py
policy/: __init__.py  optimizer.py  physics_selector.py  select.py  stability.py  train.py  tree.py
reports/: generate.py
solvers/: base.py
tests/: test_features.py  test_improvement_cycle.py  test_optimizer.py  test_pareto_analyzer.py  test_physics_selector.py  test_pinn_variants.py  test_policy.py  test_profiles.py  test_solvers.py  test_stability.py
(+31 files in other folders)
