[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-heat-transport-ai"
version = "0.1.0"
description = "PDE benchmark for heat transport in fusion plasmas"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
